bk_ida/gccida/g3/cpp_token_as_text
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1851:38: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
unsigned __int8 * cpp_token_as_text( cpp_reader_0 *pfile, __int64 a2) 
                                     ^~~~~~~~~~~~
                                     cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1851:19: error: conflicting types for 'cpp_token_as_text'
unsigned __int8 * cpp_token_as_text( cpp_reader_0 *pfile, __int64 a2) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplib.h:511:23: note: previous declaration is here
extern unsigned char *cpp_token_as_text PARAMS ((cpp_reader *,
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1856:1: error: must use 'enum' tag to refer to type 'spell_type'
spell_type category; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1858:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *free_buffs; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1861:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rdx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1862:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // rcx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1937:29: error: expected expression
free_buffs = ( _cpp_buff_0 *)&v16[v15]; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/cpplex.c:1937:16: error: use of undeclared identifier '_cpp_buff_0'
free_buffs = ( _cpp_buff_0 *)&v16[v15]; 
               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/cpp_token_as_text/src/obj/cpplex.o] Error 1
